@@ -21,6 +21,10 @@ if $tracelevel then {
 	strace $tracelevel
 	}
 
+if { ![isnative] } then {
+    continue
+}
+
 set prms_id 0
 set bug_id 0
 
