@@ -1,3 +1,8 @@
+1999-07-19  Stan Shebs  <shebs@andros.cygnus.com>
+
+	* gdb.base/foll-exec.exp, gdb.base/foll-fork.exp,
+ 	gdb.base/foll-vfork.exp: Don't run for crosses.
+
 Tue Jul 13 23:37:18 1999  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	* gdb.base/configure.in: Check for gdbvars.exp instead of
